BUG: Add locally modified box spatial object to resolve mantis 789.
This is to workaround using an unstable version of ITK for this one
fix.  This should be reverted when ITK is updated (to the release after 3.18)

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12776 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/CMakeLists.txt
@@ -17,12 +17,17 @@ PROJECT( RegisterImagesMultiResApplications )
   # Setup the source and paths
   SET( RegisterImagesMultiRes_SOURCE 
     RegisterImagesMultiRes.cxx 
-    ScalingHeuristics.cxx
-    ConvertSlicerROIToRegion.cxx) 
+    ) 
   GENERATECLP( RegisterImagesMultiRes_SOURCE
                RegisterImagesMultiRes.xml 
                ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
   INCLUDE_DIRECTORIES( ${RegisterImagesMultiResApplications_BINARY_DIR} )
+  INCLUDE_DIRECTORIES( ${RegisterImagesMultiResApplications_SOURCE_DIR} )
+
+  SET( RegisterImagesMultiRes_SOURCE
+    ${RegisterImagesMultiRes_SOURCE}
+    ScalingHeuristics.cxx
+    ConvertSlicerROIToRegion.cxx)
 
   # Build the library / plugin
   ADD_LIBRARY( RegisterImagesMultiResModule
