--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
@@ -9,8 +9,8 @@ set(RegisterImagesMultiResApplicationsTests_SOURCE
     DecomposedAffine3DTransformTest.cxx
     DownsampleHeuristicsTest.cxx
     ScalingHeuristicsTest.cxx
-    ConvertSlicerROIToRegionTest.cxx )
-    # CountSamplesTest.cxx)
+    ConvertSlicerROIToRegionTest.cxx
+    CountSamplesTest.cxx)
 
 create_test_sourcelist(RegisterImagesMultiResApplicationsTestsList
                        RegisterImagesMultiResApplicationsTests.cxx
@@ -53,6 +53,6 @@ add_test(ConvertSlicerROIToRegionTest
          ${LAUNCH_EXE} ${RegisterImagesMultiRes_TESTS}
          ConvertSlicerROIToRegionTest)
   
-#add_test(CountSamplesTest
-         #${LAUNCH_EXE} ${RegisterImagesMultiRes_TESTS}
-         #CountSamplesTest)
+add_test(CountSamplesTest
+         ${LAUNCH_EXE} ${RegisterImagesMultiRes_TESTS}
+         CountSamplesTest)
