BUG: for issu 787 to allow launching of downloaded CLI extensions using --launch
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12786 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -1061,20 +1061,21 @@ proc launch_ImportModulePaths {} {
             set newpath [string map [list \@SVN\@ $svnrevision] $::globallines]
         }
     }
-
     # set the dependencies
     if {$::env(BUILD) == $::SOLARIS ||
         $::env(BUILD) == $::LINUX_64 || 
         $::env(BUILD) == $::LINUX} {
-            set ::env(LD_LIBRARY_PATH) ":$::env(LD_LIBRARY_PATH)"
-            set ::env(LD_LIBRARY_PATH) "$newpath$::env(LD_LIBRARY_PATH)"
-        } elseif {$::env(BUILD) ==  $::DARWIN || $::env(BUILD) == $::DARWIN_X86} { 
-            set ::env(DYLD_LIBRARY_PATH) ":$::env(DYLD_LIBRARY_PATH)"
-            set ::env(DYLD_LIBRARY_PATH) "$newpath$::env(DYLD_LIBRARY_PATH)"
-        } elseif {$::env(BUILD) == $::WINDOWS} {
-            set newpath [string map [list : \;] $newpath] ; # really needed?
-            set ::env(Path) $newpath\;$::env(Path)
-        }
+      set ::env(LD_LIBRARY_PATH) ":$::env(LD_LIBRARY_PATH)"
+      set ::env(LD_LIBRARY_PATH) "$newpath$::env(LD_LIBRARY_PATH)"
+      set ::env(PATH) "$::env(PATH):$newpath"
+    } elseif {$::env(BUILD) ==  $::DARWIN || $::env(BUILD) == $::DARWIN_X86} { 
+      set ::env(DYLD_LIBRARY_PATH) ":$::env(DYLD_LIBRARY_PATH)"
+      set ::env(DYLD_LIBRARY_PATH) "$newpath$::env(DYLD_LIBRARY_PATH)"
+      set ::env(PATH) "$::env(PATH):$newpath"
+    } elseif {$::env(BUILD) == $::WINDOWS} {
+      set newpath [string map [list : \;] $newpath] ; # really needed?
+      set ::env(Path) $newpath\;$::env(Path)
+    }
 
 }
 
