BUG_FIXED: 744 Remove unreferenced storage and display nodes before saving a scene
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12791 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -87,6 +87,7 @@ set(MRML_SRCS
   vtkImageAccumulateDiscrete.cxx
   vtkImageBimodalAnalysis.cxx
   vtkDataFileFormatHelper.cxx
+  vtkMRMLLogic.cxx
   vtkMRMLCameraNode.cxx
   vtkMRMLClipModelsNode.cxx
   vtkMRMLColorNode.cxx
