ENH: Added LONG and ULONG tests to the Applications/CLI/Add test.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12819 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -78,6 +78,8 @@ add_module_test( SHORT )
 add_module_test( USHORT )
 add_module_test( INT )
 add_module_test( UINT )
+add_module_test( LONG )
+add_module_test( ULONG )
 add_module_test( FLOAT )
 add_module_test( DOUBLE )
 
