ENH: Added executable for CheckerBoard.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12839 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -179,6 +179,10 @@ slicer3_set_plugins_output_path(${CLP}Lib)
 set_target_properties (${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
 target_link_libraries (${CLP}Lib ITKIO ITKBasicFilters)
 
+add_executable(${CLP} ${CLI_SOURCE_DIR}/Templates/CommandLineSharedLibraryWrapper.cxx)
+slicer3_set_plugins_output_path(${CLP})
+target_link_libraries (${CLP} ${CLP}Lib)
+
 #####################
 set (CLP ResampleVolume)
 
