BUG: fix install rule for packaging in Qt libraries on Linux when Slicer3_USE_QT is enabled.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12852 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Utilities/Package/CMakeLists.txt
+++ b/Utilities/Package/CMakeLists.txt
@@ -136,16 +136,18 @@ if(Slicer3_USE_QT)
   SET (QTLIBLIST QTCORE QTGUI QTNETWORK QTXML QTTEST QTSQL)
   FOREACH(qtlib ${QTLIBLIST})
     IF (NOT WIN32)
-      #INSTALL(FILES ${QT_${qtlib}_LIBRARY_RELEASE} DESTINATION ${PV_INSTALL_LIB_DIR})
-      GET_FILENAME_COMPONENT(QT_LIB_DIR_tmp ${QT_${qtlib}_LIBRARY_RELEASE} PATH)
-      GET_FILENAME_COMPONENT(QT_LIB_NAME_tmp ${QT_${qtlib}_LIBRARY_RELEASE} NAME)
-      FILE(GLOB QT_LIB_LIST RELATIVE ${QT_LIB_DIR_tmp} "${QT_${qtlib}_LIBRARY_RELEASE}*")
-      INSTALL(CODE "
-MESSAGE(STATUS \"Installing lib/Slicer3/${QT_LIB_NAME_tmp}\")
-EXECUTE_PROCESS (WORKING_DIRECTORY ${QT_LIB_DIR_tmp}
-                 COMMAND tar c ${QT_LIB_LIST}
-                 COMMAND tar -xC lib/Slicer3/${PV_INSTALL_LIB_DIR})
-        " COMPONENT Runtime)
+      IF (QT_${qtlib}_LIBRARY_RELEASE)
+        #INSTALL(FILES ${QT_${qtlib}_LIBRARY_RELEASE} DESTINATION ${PV_INSTALL_LIB_DIR})
+        GET_FILENAME_COMPONENT(QT_LIB_DIR_tmp ${QT_${qtlib}_LIBRARY_RELEASE} PATH)
+        GET_FILENAME_COMPONENT(QT_LIB_NAME_tmp ${QT_${qtlib}_LIBRARY_RELEASE} NAME)
+        FILE(GLOB QT_LIB_LIST RELATIVE "${QT_LIB_DIR_tmp}" "${QT_${qtlib}_LIBRARY_RELEASE}*")
+        INSTALL(CODE "
+          MESSAGE(STATUS \"Installing lib/Slicer3/${QT_LIB_NAME_tmp}\")
+            EXECUTE_PROCESS (WORKING_DIRECTORY ${QT_LIB_DIR_tmp}
+            COMMAND tar c ${QT_LIB_LIST}
+            COMMAND tar -xC \${CMAKE_INSTALL_PREFIX}/lib/Slicer3)
+          " COMPONENT Runtime)
+      ENDIF (QT_${qtlib}_LIBRARY_RELEASE)
     ELSE (NOT WIN32)
       GET_FILENAME_COMPONENT(QT_DLL_PATH_tmp ${QT_QMAKE_EXECUTABLE} PATH)
       INSTALL(FILES ${QT_DLL_PATH_tmp}/${qtlib}4.dll DESTINATION bin COMPONENT Runtime)
