ENH: Exclude GUI-related files from computation of code coverage.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12890 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -25,6 +25,15 @@ SET(CTEST_CUSTOM_COVERAGE_EXCLUDE
  # Exclude files from the Testing directories
  ".*/Testing/.*"
 
+ # Exclude files that manage GUI 
+ ".*GUI.cxx"
+ ".*Widgets.cxx"
+ "vtkKW.*"
+ "vtkSlicerApplication.h"
+ "vtkSlicerApplication.cxx"
+ "vtkSlicerApplicationSettingsInterface.h"
+ "vtkSlicerApplicationSettingsInterface.h"
+
  # Exclude Qt source files from coverage results:
  "[A-Za-z]./[Qq]t/qt-.+-opensource-src"
  )
