ENH: bug 574: added Model Transform module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12896 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -68,6 +68,7 @@ SET(modules
 # WFEngineModule  <- can't work with 2.6 and Win32??
 # MRAblation <- not working either
   ModelMirror
+  ModelTransform
   EMSegment
   DistanceTransformModel
   ClipModel
