ENH: adding more tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12901 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/Testing/CMakeLists.txt
+++ b/Modules/ChangeTracker/Testing/CMakeLists.txt
@@ -35,3 +35,60 @@ ENDMACRO( SIMPLE_TEST  )
 
 SIMPLE_TEST( vtkChangeTrackerGUITest )
 SIMPLE_TEST( vtkMRMLChangeTrackerNodeTest )
+
+
+
+find_package(GenerateCLP REQUIRED)
+if(GenerateCLP_FOUND)
+  include(${GenerateCLP_USE_FILE})
+  endif(GenerateCLP_FOUND)
+
+  include_directories(${Slicer3_SOURCE_DIR}/Applications/CLI)
+  include_directories(${Slicer3_BINARY_DIR}/Applications/CLI)
+  include_directories(${ModuleDescriptionParser_SOURCE_DIR})
+  include_directories (${TCLAP_SOURCE_DIR}/include)
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CommandLineApplication
+                      ${ChangeTracker_BINARY_DIR}/CommandLineApplication  #
+                      CLP.h will be there
+                                         )
+
+#
+# Slicer3 is needed to resolve shared libraries
+#
+set(Slicer3_EXE ${Slicer3_BINARY_DIR}/Slicer3 )
+
+set(BASELINE "${Slicer3_SOURCE_DIR}/Testing/Data/Baseline/CLI")
+set(TEST_DATA "${Slicer3_SOURCE_DIR}/Testing/Data/Input")
+set(MRML_TEST_DATA "${Slicer3_SOURCE_DIR}/Libs/MRML/Testing/TestData")
+set(TEMP "${Slicer3_BINARY_DIR}/Testing/Temporary")
+
+set(MRML_DATA "${Slicer3_HOME}/share/MRML/Testing/TestData")
+
+add_executable(ChangeTrackerTest ChangeTrackerTest.cxx)
+add_dependencies(ChangeTrackerTest ChangeTrackerLib)
+add_dependencies(ChangeTrackerTest ChangeTrackerCommandLine)
+target_link_libraries(ChangeTrackerTest 
+                      ChangeTracker
+                      ITKIO 
+                      ITKCommon 
+                      vtkTeem
+)
+
+add_test(ChangeTrackerCL_Help 
+   ${Slicer3_BINARY_DIR}/Slicer3 --launch ChangeTrackerTest 
+   ChangeTrackerTest --help)
+
+add_test(ChangeTrackerCL_TestFull_Intensity
+   ${Slicer3_BINARY_DIR}/Slicer3 --launch ChangeTrackerTest
+   ChangeTrackerTest --sensitivity 0.95
+   --roi_xyz -4,27,28
+   --roi_radius 21,22,24
+   --intensity_analysis
+   --scan1 ${TEST_DATA}/MRMeningioma0.nrrd
+   --scan2 ${TEST_DATA}/MRMeningioma1.nrrd
+   --scan2tfm ${TEST_DATA}/MRMeningioma01.tfm
+   --scan1segmentation ${TEST_DATA}/MRMeningioma01segmented.nrrd
+   --tmpdirname ${TEMP}
+   --terminationstep 0
+   --output ${TEMP}/output.nrrd
+)
