BUG: incorrect dependency library name
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12905 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ChangeTracker/Testing/CMakeLists.txt
+++ b/Modules/ChangeTracker/Testing/CMakeLists.txt
@@ -65,7 +65,7 @@ set(TEMP "${Slicer3_BINARY_DIR}/Testing/Temporary")
 set(MRML_DATA "${Slicer3_HOME}/share/MRML/Testing/TestData")
 
 add_executable(ChangeTrackerTest ChangeTrackerTest.cxx)
-add_dependencies(ChangeTrackerTest ChangeTrackerLib)
+#add_dependencies(ChangeTrackerTest ChangeTrackerLib)
 add_dependencies(ChangeTrackerTest ChangeTrackerCommandLine)
 target_link_libraries(ChangeTrackerTest 
                       ChangeTracker
