BUG: Adjust tolerance for register images test.  Getting different results for linux and windows but both seem reasonable.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12919 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
+++ b/Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/CMakeLists.txt
@@ -67,6 +67,7 @@ target_link_libraries(RegisterImagesMultiResTest RegisterImagesMultiResModule)
 add_test(RegisterImagesMultiResTest ${Slicer3_EXE} --launch RegisterImagesMultiResTest
   --compare   ${BASELINE}/RegisterImagesMultiResTest.nrrd
   ${TEMP}/RegisterImagesMultiResResult.nrrd
+  --compareNumberOfPixelsTolerance 1
   ModuleEntryPoint
   ${MRML_TEST_DATA}/fixed.nrrd
   ${MRML_TEST_DATA}/moving.nrrd
