BUG: fixing crashing bug when non-PET volume is selected as pet volume by checking for null pointer. Also adding plotting infrastructure which is currently stubbed out
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12937 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/PETCTFusion/CMakeLists.txt
+++ b/Modules/PETCTFusion/CMakeLists.txt
@@ -51,6 +51,7 @@ set(PETCTFusion_SRCS
   vtkMRMLPETCTFusionNode.cxx        
   vtkPETCTFusionLogic.cxx
   vtkPETCTFusionGUI.cxx
+  vtkPETCTFusionPlots.cxx
   )
 
 # --------------------------------------------------------------------------
