ENH: adding CLI wrapping N4ITK algorithm, see Insight Journal publication 640: Tustison N, Gee J "N4ITK: Nick's N3 ITK Implementation for MRI Bias Field Correction", http://hdl.handle.net/10380/3053
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12940 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -675,6 +675,7 @@ SET(cli_modules
   #EndoNavTracking
   ExtractSkeleton
   #Java
+  N4ITKBiasFieldCorrection
   )
 
 if ( ${ITK_VERSION_MAJOR} GREATER 3 )
