BUG: fix crash when adding multiple structures, and add test to search for leaks
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12945 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Editor/Testing/CMakeLists.txt
+++ b/Modules/Editor/Testing/CMakeLists.txt
@@ -2,4 +2,7 @@
 # Testing
 
 ADD_TEST(Slicer3EditorModelMakerTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Modules/Editor/Testing/TestEditorModelMaker.tcl ${Slicer3_SOURCE_DIR}/Libs/MRML/Testing/TestData/helixMask.nrrd)
+
 ADD_TEST(Slicer3EditorPaintTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Modules/Editor/Testing/TestEditorPaint.tcl ${Slicer3_SOURCE_DIR}/Libs/MRML/Testing/TestData/fixed.nrrd)
+
+ADD_TEST(Slicer3EditorStructureTest ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Modules/Editor/Testing/TestEditorStructures.tcl ${Slicer3_SOURCE_DIR}/Libs/MRML/Testing/TestData/fixed.nrrd)
