ENH: reorganization of the parameters; filled in help and acks; updated testing to use the new parameter flags
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12978 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/N4ITKBiasFieldCorrection/CMakeLists.txt
+++ b/Applications/CLI/N4ITKBiasFieldCorrection/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET(CLP N4ITKBiasFieldCorrection)
 SET(${CLP}_SOURCE ${CLP}.cxx)
-GENERATECLP(${CLP}_SOURCE ${CLP}.xml) # N4ITKBiasFieldCorrection N4ITKBiasFieldCorrection.xml)
+GENERATECLP(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h)
 ADD_LIBRARY(${CLP}Lib SHARED ${${CLP}_SOURCE})
 SET_TARGET_PROPERTIES(${CLP}Lib PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
 slicer3_set_plugins_output_path(${CLP}Lib)
