ENH: Test working now.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12979 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
@@ -3,6 +3,11 @@
 #
 include_regular_expression("^.*$")
 
+enable_testing()
+
+find_package(Slicer3 REQUIRED)
+include(${Slicer3_USE_FILE})
+
 find_package(GenerateCLP REQUIRED)
 if(GenerateCLP_FOUND)
   include(${GenerateCLP_USE_FILE})
@@ -16,14 +21,14 @@ include_directories (${TCLAP_SOURCE_DIR}/include)
 #
 # Slicer3 is needed to resolve shared libraries
 #
-set(Slicer3_EXE ${DicomToNrrdConverter_BINARY_DIR}/DicomToNrrdConverter )
+set(Slicer3_EXE ${Slicer3_DIR}/Slicer3 )
 set(TEST_DATA "${Slicer3_SOURCE_DIR}/Testing/Data/Input")
 set(TEMP "${Slicer3_BINARY_DIR}/Testing/Temporary")
 
 ##################################
 # DicomToNrrdConverter tests
 add_test(DicomToNrrdConverterTest ${Slicer3_EXE} --launch DicomToNrrdConverterTest
-  DicomToNrrdConverterTest
+    ModuleEntryPoint
     --inputDicomDirectory ${TEST_DATA}/DWIDicom
     --outputVolume ${TEMP}/DWIDicom.nhdr
   )
@@ -31,5 +36,5 @@ add_test(DicomToNrrdConverterTest ${Slicer3_EXE} --launch DicomToNrrdConverterTe
 set (CLP DicomToNrrdConverter)
 add_executable(${CLP}Test ${CLP}Test.cxx)
 add_dependencies(${CLP}Test ${CLP})
-target_link_libraries(${CLP}Test ITKIO)
+target_link_libraries(${CLP}Test ${CLP}Lib)
 
